[package]
name = "native-headless"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[features]
tracing = ["dep:tracing-subscriber", "dioxus-native-dom/tracing"]

[dependencies]
dioxus = { workspace = true, default-features = false, features = ["html", "hooks", "signals"] }
dioxus-native-dom = { path = "../../packages/native-dom" }
anyrender_vello = "0.4.1"
vello = "0.5"
rustc-hash = "1"
futures-util = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
wgpu = { workspace = true }
pollster = "0.4"
bytemuck = "1"
blitz-paint = { workspace = true, default-features = true }
blitz-traits = { workspace = true, default-features = true }
blitz-dom = { workspace = true, default-features = true }
