[package]
name = "openid_auth_demo"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
console_error_panic_hook = "0.1"
dioxus = { path = "../../packages/dioxus", default_features = true, features = [
  "router",
  "signals",
], version = "*" }
dioxus-logger = "0.5.1"
dioxus-sdk = { git = "https://github.com/Dioxuslabs/sdk", features = [
  "storage",
] }
dioxus-signals = { path = "../../packages/signals", version = "*" }
form_urlencoded = "1.2.1"
log = "0.4"
openidconnect = "3.5.0"
reqwest = "0.11.27"
# reqwasm = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tracing = "0.1.40"
uuid = "1.8"
web-sys = { version = "0.3", features = ["Request", "Document"] }

[features]
default = ["web"]
server = ["dioxus/axum"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
fullstack = ["dioxus/fullstack"]

# since we're using dioxus from local path, inform dioxus-sdk to use it as well
[patch.crates-io]
dioxus = { version = "0.5.1", path = "../../packages/dioxus" }
dioxus-signals = { path = "../../packages/signals" }
