[package]
name = "simple-web-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
wasm-bindgen = { workspace = true}

[features]
default = ["dioxus/web"]
web = ["dioxus/web"]
server = ["dioxus/server"]
