[package]
name = "dioxus-tailwind"
version = "0.0.0"
authors = []
edition = "2021"
description = "A tailwindcss example using Dioxus"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/dioxus/"
homepage = "https://dioxuslabs.com"
documentation = "https://dioxuslabs.com"
rust-version = "1.60.0"
publish = false

[dependencies]
manganis = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { path = "../../packages/dioxus", features = ["desktop"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { path = "../../packages/dioxus", features = ["web"] }
