# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "wgpu-texture"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
dioxus-native = { path = "../../packages/native" }
dioxus = { workspace = true }
wgpu = "24"
bytemuck = "1"
color = "0.3"
