[package]
name = "dioxus-playwright-fullstack-test"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-web = { path = "../../packages/web", features=["hydrate"], optional = true }
dioxus = { path = "../../packages/dioxus" }
dioxus-fullstack = { path = "../../packages/fullstack" }
axum = { version = "0.6.12", optional = true }
tokio = { version = "1.27.0", features = ["full"], optional = true }
serde = "1.0.159"
execute = "0.2.12"

[features]
default = []
ssr = ["axum", "tokio", "dioxus-fullstack/axum"]
web = ["dioxus-web"]
