[package]
name = "dioxus-playwright-liveview-test"
version = "0.0.1"
edition = "2021"
description = "Playwright test for Dioxus Liveview"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
dioxus = { path = "../../packages/dioxus" }
dioxus-liveview = { path = "../../packages/liveview", features = ["axum"] }
tokio = { version = "1.19.2", features = ["full"] }
axum = { version = "0.6.1", features = ["ws"] }
